[package]
name = "lua-kit"
version = "0.2.0-alpha.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2018"

description = "Toolkit for working with Lua bytecode"
readme = "README.md"
license = "MIT"
keywords = ["lua", "lua53", "bytecode"]

repository = "https://github.com/SpaceManiac/lua-kit"

[dependencies]
byteorder = "1.3"
